# dotfiles

./: .bandit  .bash_aliases  .bash_profile  .bashrc  .bashrc.mac  .gitconfig  .gitignore  .gvimrc  .pre-commit-config.yaml  .vimrc  Pipfile  README.md  _gvimrc  _vimrc  com.googlecode.iterm2.plist  dotfiles.py  pyproject.toml  pytest.ini  ruff.toml  run.ps1  run.sh  starship.toml  test_dotfiles.py
.config/: starship.toml
