[project]
name = "dotfiles"
version = "1.0.0"
description = "Install CLI tools and provide preferred configurations"
requires-python = ">=3.11"
dependencies = [
    "click",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "flake8",
    "black",
    "ipython",
    "types-requests",
]
