[project]
name = "dotfiles"
version = "0.1.0"
description = "Install all personal applications & settings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "ipython",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "types-requests",
]